--- a/app.json
+++ b/app.json
@@ -102,7 +102,7 @@
         "CP": {
             "description": "Caption",
             "required": true,
-            "value": "Created by 69"
+            "value": "✨ 69 ✨"
         },
         "MENU": {
             "description": "Menu Header",
