--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "69",
     "description": "",
     "logo": "https://i.postimg.cc/Bv11kvHn/1961540.jpg",
-    "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
+    "keywords": ["whatsapp", "userbot", "69", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/ThevinduHansara/69",
     "website":   "",
     "success_url": "",
